--- a/README
+++ b/README
@@ -11,3 +11,15 @@ Munchies can appear inside the worms body as I didn't have enough time to fully 
 Munchies can also appear inside of the top wall due to the same reasons that the worm can walk inside the top wall.
 
 In the very beginning the worm can go through itself because the freepool isn't updated, but after it moves out of the initial position it will collide with itself.
+
+## Building
+
+Run `nix-shell` to create a build environment and run the initial compile. Run `make` for subsequent builds.
+
+## Running
+
+Run `./worm` to start the game.
+
+## Controls
+
+`w`, `a`, `s`, `d` or `i`, `j`, `k`, `l` to move the worm.
